# simple_crawler

./: AUTHORS  CMakeLists.txt  README.md
CMakeModules/: FindMySQL.cmake  FindPCRE.cmake
conf/: db-example.ini  fetcher-example.ini  xtrt-example.ini
data/base/: baidu-search-result-location.xsl  baidu-search-result.xsl  create.sql  qidian-result.xsl  seed.txt
src/: CMakeLists.txt  configuration.cpp  configuration.h  crawler_main.cpp  crawler_manager.cpp  crawler_manager.h  downloader.cpp  downloader.h  extracter.cpp  extracter.h  fetcher.cpp  fetcher.h  log.h  mysql_wrapper.cpp  mysql_wrapper.h  str2id.cpp  str2id.h  string_utils.cpp  string_utils.h  webpage.cpp  webpage.h
