PROJECT(simple_crawler)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_FILE_OFFSET_BIT=64 -std=c++0x -Wno-deprecated -D_LARGE_FILE -W")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS} -g")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS}")

IF (CMAKE_BUILD_TYPE STREQUAL "Debug")
  ADD_DEFINITIONS(-DDEBUG)
	MESSAGE(STATUS "Debug Mode")
	MESSAGE(STATUS "Flags:" ${CMAKE_CXX_FLAGS_DEBUG})
ELSE (CMAKE_BUILD_TYPE STREQUAL "Debug")
	MESSAGE(STATUS "Release Mode")
	MESSAGE(STATUS "Flags:" ${CMAKE_CXX_FLAGS_RELEASE})
ENDIF (CMAKE_BUILD_TYPE STREQUAL "Debug")

INCLUDE_DIRECTORIES(
  /usr/include/libxml2/
)

AUX_SOURCE_DIRECTORY(./ CUR_SRCS)

SET(LIBRARIES
  libxml2.so
  libxslt.so
  libpcre.so
  libcurl.so
  libmysqlclient.so
)

ADD_EXECUTABLE(simple_crawler ${CUR_SRCS})
TARGET_LINK_LIBRARIES(simple_crawler ${LIBRARIES})

SET(EXECUTABLE_OUTPUT_PATH ./bin)
