CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(MySQL REQUIRED)
FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(PCRE REQUIRED)
FIND_PACKAGE(LibXml2 REQUIRED)
FIND_PACKAGE(LibXslt REQUIRED)

INCLUDE_DIRECTORIES(
  ${MYSQL_INCLUDE_DIR}
  ${CURL_INCLUDE_DIR}
  ${PCRE_INCLUDE_DIR}
  ${LIBXML2_INCLUDE_DIR}
  ${LIBXSLT_INCLUDE_DIR}
)

AUX_SOURCE_DIRECTORY(./ CUR_SRCS)

SET(LIBRARIES
  ${LIBXML2_LIBRARIES}
  ${LIBXSLT_LIBRARIES}
  ${CURL_LIBRARIES}
  ${MYSQL_LIBRARY}
  ${PCRE_LIBRARY}
)

ADD_EXECUTABLE(simple_crawler ${CUR_SRCS})
TARGET_LINK_LIBRARIES(simple_crawler ${LIBRARIES})
